--- a/assets/css/contact.css
+++ b/assets/css/contact.css
@@ -1,19 +1,16 @@
-
+/* <!-- This is for the background of the page--> */
 body{
     background-image: url(../images/connect.png);
     background-repeat: repeat;
     text-align: inherit;
-
 }
-
- header{
+    /* The header with my name and also the links */
+header{
     background: #ffffff;
     height: 60px; 
-    clear: both;
-    border-bottom: #666666 solid 2px;
-
-}  
-
+    border-bottom:  #cccccc solid 2px;
+    
+}
 /* the styling/positioning of the name on the left-hand side */
 .name {
     font-size: 27px;
@@ -25,7 +22,7 @@ body{
     color: #ffffff;
     margin-left: 250px;
     margin-top: -20px;
-}
+} 
 
 /* the styling and positioning for the links on the right hand side */
 .righty {
@@ -49,7 +46,7 @@ li {
   }
 li a {
     display: block;
-    color: #666666;
+    color: #cccccc;
     text-align: center;
     padding: 20px 16px;
     position: relative;
@@ -65,44 +62,69 @@ a{
   span{
       padding-left: 
   }
-
-img{
-    height: 300px;
-    width: 300px;
-    float: left;
-    padding: 10px;
-    position: relative;
-}
-
+ 
+/* main area for the conatct part of page */
 main{
     background-color: #ffffff;
     border: #c9c9c9 1px solid;
-    width: 800px;
-    height: 500px;
+    width: 600px;
+    height: 400px;
     padding: 10px;
-    margin-left: 350px;
+    margin-left: 400px;
     margin-top: 25px;
     margin-bottom: 25px;
+    color: #777777;
+    font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif; 
 
 }
-
-
-h1 .about{
-    font-family: 'Georgia', Times, Times New Roman, serif;
-    background-color: white;
-
-}
+/* heading part of the main area of page */
 h1{
     color: #4aaaa5;
-    padding: 15px;
+    font-weight: 300;
+    padding: 10px;
+    padding-bottom: 20px;
+    font-size: 20px;
+    font-weight: 700;
     border-bottom: 2px solid #c9c9c9;
+    font-family: 'Times New Roman', Times, serif;
+
 }
 
-p{
+/* The style and imput of the type/text area */
+input[type=text], select, textarea {
+    width: 100%; 
+    position: static;
+    padding: 8px, 10px, 25px, 10px; 
+    border: 1px solid #c9c9c9; 
+    box-sizing: border-box; 
+    margin-top: 4px; 
+    margin-bottom: 8px; 
+    font-size: 12px;
+    top: 100px;
+  }
+  
+  /* The styling of the submit button */
+  input[type=submit] {
+    background-color: #4aaaa5;
+    color: white;
+    padding: 7px 20px;
+    border: none;
+    font-size: 11px;
+  }
+
+  /* Styling of the conatiner */
+  .container{
+    border-radius: 5px;
+    background-color: #ffffff;
+    height: 300px;
+    margin: 10px;
+    padding: 10px;
+    top: 200px;
     font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
-}
+  }
 
-footer {
+  /* bottom part of the screen */
+ footer {
     position:fixed;
     text-align: center;
     left:0px;
