--- a/assets/css/contact.css
+++ b/assets/css/contact.css
@@ -1,97 +1,94 @@
-/* <!-- This is for the background of the page--> */
+/* where the background is set */
 body{
-    background-image: url(../images/connect.png);
-    background-repeat: repeat;
-    text-align: inherit;
+  background-image: url(../images/connect.png);
+  background-repeat: repeat;
+  text-align: inherit;
 }
-    /* The header with my name and also the links */
+
+/* The header with my name and also the links */
 header{
-    background: #ffffff;
-    height: 60px; 
-    border-bottom:  #cccccc solid 2px;
-    
+  background: #ffffff;
+  height: 60px; 
+  border-bottom:  #cccccc solid 2px;
 }
+
 /* the styling/positioning of the name on the left-hand side */
 .name {
-    font-size: 27px;
-    float: left;
-    background: #4aaaa5;
-    width: 250px;
-    height: 80px;
-    text-align: center;
-    color: #ffffff;
-    margin-left: 250px;
-    margin-top: -20px;
+  font-size: 22px;
+  float: left;
+  background: #4aaaa5;
+  width: 225px;
+  height: 80px;
+  text-align: center;
+  color: #ffffff;
+  margin-left: 350px;
+  margin-top: -20px;
+  font-family: Georgia, 'Times New Roman', Times, serif;
 } 
 
-/* the styling and positioning for the links on the right hand side */
+/* the positioning for the links on the right hand side */
 .righty {
-    float: right;
-    margin-top: -20px;
-
+  float: right;
+  padding-right: 250px;
+  padding-top: 20px;
+  margin-right: 10px; 
 }
-span{
 
+/* the styling for the links on the right hand side */
+a { 
+  display: inline-block;
+  right:100px;
+  color: #c9c9c9;
+  text-align: center;
+  position: relative;
+  font-size: 16px;
+  list-style-type: none;
+  overflow: hidden;
+  background-color: white;
+  font-weight: 300px;
+  text-decoration: none;
+  font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
 }
-ul {
-    list-style-type: none;
-    overflow: hidden;
-    background-color: white;
 
-  }
-li {
-    float: left;
-    padding:0, 20px, 0,0;
- 
-  }
-li a {
-    display: block;
-    color: #cccccc;
-    text-align: center;
-    padding: 20px 16px;
-    position: relative;
-    font-size: 16px;
-    /* font-weight: 200; */
-    margin-right: 0px;
-    font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
-  }
-
-a{
-    text-decoration: none;
-  }
-  span{
-      padding-left: 
-  }
+/* These little things "/" the color and movement */
+span {
+  letter-spacing: 1em;
+  color: #cccccc;
+  padding: 5px;
+  padding-left: 15px;
+  left: 10px;
+}
  
 /* main area for the conatct part of page */
 main{
     background-color: #ffffff;
-    border: #c9c9c9 1px solid;
-    width: 600px;
+    border: #cccccc 1px solid;
+    width: 700px;
     height: 400px;
     padding: 10px;
-    margin-left: 400px;
+    padding-bottom: 25px;
+    margin-left: 350px;
     margin-top: 25px;
     margin-bottom: 25px;
     color: #777777;
-    font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif; 
-
+    font-family: Georgia, 'Times New Roman', Times, serif; 
 }
+
 /* heading part of the main area of page */
 h1{
     color: #4aaaa5;
     font-weight: 300;
     padding: 10px;
+    margin: 10px;
     padding-bottom: 20px;
-    font-size: 20px;
+    font-size: 24px;
     font-weight: 700;
     border-bottom: 2px solid #c9c9c9;
-    font-family: 'Times New Roman', Times, serif;
-
+    font-family: 'Georgia', Times, Times New Roman, serif;
 }
 
 /* The style and imput of the type/text area */
-input[type=text], select, textarea {
+input[type=text], textarea {
     width: 100%; 
     position: static;
     padding: 8px, 10px, 25px, 10px; 
@@ -102,41 +99,54 @@ input[type=text], select, textarea {
     font-size: 12px;
     top: 100px;
   }
-  
-  /* The styling of the submit button */
-  input[type=submit] {
-    background-color: #4aaaa5;
-    color: white;
-    padding: 7px 20px;
-    border: none;
-    font-size: 11px;
+
+  /* The padding from the box in the contact form */
+#name {
+  padding-left: 10px;
   }
 
-  /* Styling of the conatiner */
-  .container{
-    border-radius: 5px;
-    background-color: #ffffff;
-    height: 300px;
-    margin: 10px;
-    padding: 10px;
-    top: 200px;
-    font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
+    /* The padding from the box in the contact form */
+#email{
+  padding-left: 10px;
+  }
+
+  /* The styling of the submit button */
+input[type=submit] {
+  background-color: #4aaaa5;
+  color: white;
+  padding: 7px 20px;
+  border: none;
+  font-size: 11px;
+  }
+
+/* Styling of the conatiner */
+.container{
+  border-radius: 5px;
+  background-color: #ffffff;
+  height: 300px;
+  margin: 10px;
+  padding: 10px;
+  top: 200px;
+  font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
   }
 
   /* bottom part of the screen */
  footer {
-    position:fixed;
-    text-align: center;
-    left:0px;
-    bottom:0px;
-    height:50px;
-    width:100%;
-    border-top: 7px solid #4aaaa5;
-    background: #757373;
-    color: #ffffff;
-    font-size: 8px;
-    font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
- }
- #bottom{
-     margin: 35px;
- }
+  position: fixed;
+  text-align: center;
+  left:0px;
+  bottom:0px;
+  height:50px;
+  width:100%;
+  border-top: 7px solid #4aaaa5;
+  background: #666666;
+  color: #ffffff;
+  font-size: 8px;
+  font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
+}
+
+/* Bringing the copyright tag down to the bottom */
+#bottom{
+   margin: 35px;
+}
+
