--- a/assets/css/portfolio.css
+++ b/assets/css/portfolio.css
@@ -1,172 +1,210 @@
-/* <!-- This is for the background of the page--> */
+/* where the background is set */
 body{
-    background-image: url(../images/connect.png);
-    background-repeat: repeat;
-    text-align: inherit;
+  background-image: url(../images/connect.png);
+  background-repeat: repeat;
+  text-align: inherit;
 }
-    /* The header with my name and also the links */
+  /* The header with my name and also the links */
 header{
-    background: #ffffff;
-    height: 60px; 
-    border-bottom:  #cccccc solid 2px;
-    
+  background: #ffffff;
+  height: 60px; 
+  border-bottom:  #cccccc solid 2px;
+  
 }
 /* the styling/positioning of the name on the left-hand side */
 .name {
-    font-size: 27px;
-    float: left;
-    background: #4aaaa5;
-    width: 250px;
-    height: 80px;
-    text-align: center;
-    color: #ffffff;
-    margin-left: 375px;
-    margin-top: -20px;
+  font-size: 22px;
+  float: left;
+  background: #4aaaa5;
+  width: 225px;
+  height: 80px;
+  text-align: center;
+  color: #ffffff;
+  margin-left: 350px;
+  margin-top: -20px;
+  font-family: Georgia, 'Times New Roman', Times, serif;
 } 
 
-/* the styling and positioning for the links on the right hand side */
+/* the positioning for the links on the right hand side */
 .righty {
-    float: right;
-    margin-top: -20px;
-
+  float: right;
+  padding-right: 250px;
+  padding-top: 20px;
+  margin-right: 10px;
+  
 }
-span{
-
+/* the styling for the links on the right hand side */
+a { 
+  display: inline-block;
+  right:100px;
+  color: #c9c9c9;
+  text-align: center;
+  position: relative;
+  font-size: 16px;
+  list-style-type: none;
+  overflow: hidden;
+  background-color: white;
+  font-weight: 300px;
+  text-decoration: none;
+  font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
 }
-ul {
-    list-style-type: none;
-    overflow: hidden;
-    background-color: white;
+/* These little things "/" the color and movement */
+span {
+letter-spacing: 1em;
+color: #cccccc;
+padding: 5px;
+padding-left: 15px;
+left: 10px;
+}  /* bottom part of the screen */
 
-  }
-li {
-    float: left;
-    padding:0, 20px, 0,0;
- 
-  }
-li a {
-    display: block;
-    color:  #cccccc;
-    text-align: center;
-    padding: 20px 16px;
-    position: relative;
-    font-size: 16px;
-    /* font-weight: 200; */
-    margin-right: 50px;
-    font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
-  }
-
-a{
-    text-decoration: none;
-  }
 
 /* main area for the conatct part of page */
 main{
-    background-color: #ffffff;
-    border: #c9c9c9 1px solid;
-    width: 600px;
-    height: 600px;
-    padding-bottom: 50px;
-    padding-left: 15px;
-    padding-right: 15px;
-    margin-left: 375px;
-    margin-top: 17px;
-    margin-bottom: 17px;
-    color: #777777;
-    font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif; 
+background-color: #ffffff;
+border: #c9c9c9 1px solid;
+width: 675px;
+height: 640px;
+position: relative;
+margin-top: 25px;
+margin-left: 375px;
+color: #777777;
+font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif; 
 
 }
 /* heading part of the main area of page */
 h1{
   color: #4aaaa5;
   font-weight: 300;
-  padding: 10px;
+  padding: 10px; 
+  margin: 10px;
   padding-bottom: 20px;
   font-size: 20px;
   font-weight: 700;
   border-bottom: 2px solid #c9c9c9;
-  font-family: 'Times New Roman', Times, serif;
+  font-family: 'Georgia', Times, Times New Roman, serif;
 
 }
-  .column {
-  float: left;
-  padding: px;
-  padding-top: 15px;
-  padding-left: 5px; 
-} 
 
-.row::after {
-  clear: both;
-  /* display: table;  */
-} 
- .row-2::after {
-  clear: both;
-  /* padding-right: 5px; */
-  /* display: table;  */
-}  
+/* The width of the colomn to help align images */
+.column {
+ width: 25%;
+}
 
   /* Styling of the conatiner */
 .container {
   border-radius: 5px;
   background-color: #ffffff;
-  padding:10px;
-  position: relative;
-  top: -10px; 
+  padding:5px;
+  margin: 5px;
   text-align: center;
   font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
+  } 
+
+/* image specs */
+ img{
+  padding-top: 20px;
+  padding-bottom: -20px; 
+  margin: 10px; 
+  top: -20px;
+  position: relative;
   }
 
-img{
-  padding-left: 0px;
-  padding-bottom: 5px;
-  margin: 10px;
-  }
-p{
-    background: #4aaaa5;
-    color: #ffffff;
+  /* font listed on the pictures */
+ p{
+  width: 156px;
+  background: #4aaaa5;
+  color: #ffffff;
+  top: 100px;
+  padding: 10px;
+  right: 11px;
+  text-align: center;
 }
-  /* Bottom left text */
-.bottom-left {
-  bottom: 8px;
-  left: 16px;
+/* Picture positioning on portfolio page */
+ .picture1{
+  float: left;
+  padding: 10px;
+  height:145px;
+  width: 200px;
+ }
+
+ .picture2{
+  float: left;
+  padding: 10px;
+  height:145px;
+  width: 200px;
+
+}
+.picture3{
+  float: left;
+  padding: 10px;
+  height:145px;
+  width: 200px;
+}
+
+.picture4{
+  float: left;
+  padding: 10px;
+  height:145px;
+  width: 200px;
+  margin-left: 9px;
+}
+
+.picture5{
+  float: left;
+  padding: 10px;
+  height:145px;
+  width: 200px;
 }
 
 /* Top left text */
-.top-left {
-   top: 8px;
-  left: 16px;
+ .top-left {
+  position: relative;
+  bottom:100px;
+  padding-left: 11px;
 } 
+
 /* Top right text */
-.middle-left {
-   top: 8px;
-  right: 16px; 
-} 
+ .middle-left {
+  position: relative;
+  bottom:100px;
+  padding-left: 11px;
+}  
+
  /* Top right text  */
  .top-right { 
- top: 8px;
-  right: 16px; 
- }
+  position: relative;
+  bottom:100px;
+  padding-left: 11px; 
+ } 
 
  /* Bottom right text */
-.bottom-right {
-  top: 8px;
-  right: 16px; 
-}
+ .middle-right {
+  position: relative;
+  bottom:100px;
+  padding-left: 11px; 
+}  
 
-  /* bottom part of the screen */
- footer {
-    position: fixed;
-    text-align: center;
-    left:0px;
-    bottom:0px;
-    height:50px;
-    width:100%;
-    border-top: 7px solid #4aaaa5;
-    background: #757373;
-    color: #ffffff;
-    font-size: 8px;
-    font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
+   /* Bottom left text */
+.bottom-left {
+  position: relative;
+  bottom:100px;
+  padding-left: 11px; 
+} 
+
+footer {
+  position: fixed;
+  text-align: center;
+  left:0px;
+  bottom:0px;
+  height:50px;
+  width:100%;
+  border-top: 7px solid #4aaaa5;
+  background: #666666;
+  color: #ffffff;
+  font-size: 8px;
+  font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
  }
- #bottom{
-     margin: 35px;
- }
+ /* Bringing the copyright tag down to the bottom */
+#bottom{
+  margin: 35px;
+}
