--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,79 +1,87 @@
 
+/* where the background is set */
 body{
     background-image: url(../images/connect.png);
     background-repeat: repeat;
     text-align: inherit;
-
-}
-
- header{
+  }
+    /* The header with my name and also the links */
+header{
     background: #ffffff;
     height: 60px; 
-    clear: both;
-    border-bottom: #666666 solid 2px;
+    border-bottom:  #cccccc solid 2px; 
+  }
 
-}  
-
-/* the styling/positioning of the name on the left-hand side */
+  /* the styling/positioning of the name on the left-hand side */
 .name {
-    font-size: 27px;
+    font-size: 22px;
     float: left;
     background: #4aaaa5;
-    width: 250px;
+    width: 225px;
     height: 80px;
     text-align: center;
     color: #ffffff;
-    margin-left: 250px;
+    margin-left: 350px;
     margin-top: -20px;
-}
-
-/* the styling and positioning for the links on the right hand side */
+    font-family: Georgia, 'Times New Roman', Times, serif;
+  } 
+  
+  /* the positioning for the links on the right hand side */
 .righty {
     float: right;
-    margin-top: -20px;
+    padding-right: 250px;
+    padding-top: 20px;
+    margin-right: 10px; 
+  }
 
-}
-span{
-
-}
-ul {
+  /* the styling for the links on the right hand side */
+a { 
+    display: inline-block;
+    color: #c9c9c9;
+    text-align: center;
+    position: relative;
+    font-size: 16px;
     list-style-type: none;
     overflow: hidden;
     background-color: white;
-
-  }
-li {
-    float: left;
-    padding:0, 20px, 0,0;
- 
-  }
-li a {
-    display: block;
-    color: #666666;
-    text-align: center;
-    padding: 20px 16px;
-    position: relative;
-    font-size: 16px;
-    /* font-weight: 200; */
-    margin-right: 0px;
+    font-weight: 300px;
+    text-decoration: none;
     font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
   }
 
-a{
-    text-decoration: none;
-  }
-  span{
-      padding-left: 
-  }
+  /* These little things "/" the color and movement */
+span {
+    letter-spacing: 1em;
+    color: #cccccc;
+    padding: 5px;
+    padding-left: 15px;
+    left: 10px;
+  }  /* bottom part of the screen */
+  
 
+  /* heading part of the main area of page */
+h1{
+    color: #4aaaa5;
+    font-weight: 300;
+    padding: 10px; 
+    margin: 12px;
+    padding-bottom: 20px;
+    font-size: 24px;
+    font-weight: 700;
+    border-bottom: 2px solid #c9c9c9;
+    font-family: 'Georgia', Times, Times New Roman, serif;
+  }
+  
+/* Image adjustments for about me page */
 img{
-    height: 300px;
-    width: 300px;
+    height: 200px;
+    width: 200px;
     float: left;
     padding: 10px;
     position: relative;
 }
 
+  /* main area for the conatct part of page */
 main{
     background-color: #ffffff;
     border: #c9c9c9 1px solid;
@@ -83,38 +91,36 @@ main{
     margin-left: 350px;
     margin-top: 25px;
     margin-bottom: 25px;
-
+    color: #777777;
+    font-family: Georgia, 'Times New Roman', Times, serif; 
 }
 
 
-h1 .about{
-    font-family: 'Georgia', Times, Times New Roman, serif;
-    background-color: white;
-
-}
-h1{
-    color: #4aaaa5;
-    padding: 15px;
-    border-bottom: 2px solid #c9c9c9;
-}
-
+/* padding and font for the paragraph area  */
 p{
     font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
+    padding: 12px;
+    letter-spacing: .02em;
+    line-height: 1.4em;
+    
 }
 
+  /* bottom part of the screen */
 footer {
-    position:fixed;
+    position: fixed;
     text-align: center;
     left:0px;
     bottom:0px;
     height:50px;
     width:100%;
     border-top: 7px solid #4aaaa5;
-    background: #757373;
+    background: #666666;
     color: #ffffff;
     font-size: 8px;
     font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
- }
- #bottom{
-     margin: 35px;
- }
+   }
+
+   /* Bringing the copyright tag down to the bottom */
+#bottom{
+    margin: 35px;
+  }
